# kaleido3d

./: .gitignore  CMakeLists.txt  README.md  kaleido3d.ib
.github/: FUNDING.yml
dev/IrisBuild/: cpp_gen.py  v8_bindgen.py  xige.py
scripts/cmake/: common.cmake  generate_winres.cmake  targets.cmake
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  CoreMinimal.h
src/Core/Base/: Platform.h  Simd.h  Types.h
src/Core/KTL/: Algorithm.h  Allocator.h  Atomic.h  Circular.h  DynArray.h  LockFreeQueue.h  SharedPtr.h  SparseArray.h  String.h
src/Core/Math/: Geometry.h  Matrix.h  Quaterion.h  Vector.h
src/Core/Net/: Net.h
src/Core/XPlatform/: App.cpp  App.h  InputDevice.h  Os.h  Window.h
src/NGFX/: CMakeLists.txt
src/NGFX/CMake/: AddNGFXTest.cmake
src/NGFX/IDL/: ngfx.enums.hpp  ngfx.interface.hpp  ngfx.structs.hpp
src/NGFX/Private/: ngfx_shell.cpp
src/NGFX/Private/ShaderCompiler/: ngfx_shader_compiler.cpp  spirv.h  spirv_parser.cpp  spirv_parser.h
src/NGFX/Private/ShaderFormats/: ngfx_shader.cpp
src/NGFX/Private/Vulkan/: device_procs.inl  instance_procs.inl  linear_array.h  vk_commands.cpp  vk_commands.h  vk_common.h  vk_device.cpp  vk_device.inl  vk_instance.cpp  vk_instance.inl  vk_log.cpp  vk_low_level_mem.cpp  vk_pipeline.cpp  vk_ray_tracing.cpp  vk_resource.cpp  vk_swapchain.cpp  volk.c  volk.h
src/NGFX/Public/: ngfx.h  ngfx_allocator.h  ngfx_atomic.h  ngfx_container.h  ngfx_hash.h  ngfx_ptr.h  ngfx_shader.h  ngfx_shader_compiler.h  ngfx_shell.h  shaderlab.h
src/NGFX/Test/: CMakeLists.txt  ngfx_compute_encoder.cpp  ngfx_render_encoder.cpp  vk_ngfx.cpp
src/NGFX/Test/base/: test_gui.cc  test_gui.h
src/Platform/Microsoft/Win32/: Window.cpp
src/Script/: CMakeLists.txt  V8Binding.cpp  V8Binding.h  build.ib
src/Script/Test/: CMakeLists.txt  DemoApp.cpp  JsApp.cpp  JsApp.h  JsAppBinding.cpp  JsAppBinding.h  app.js
